// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots InputPassword icon left 1`] = `
<div
  class="InputPasswordstory__PageLayout-sc-15ehmhm-0 ecfdjd"
>
  <div
    class="inputPasswordstyle__InputPasswordStyles-sc-1wi8vl4-0 iYinPH"
  >
    <div
      class="inputWrapperstyle__InputStyles-sc-1pduhqy-0 ghDlDm"
    >
      <span
        class="label"
      >
        Password
      </span>
      <label
        class=""
        for="password"
        id="password"
      >
        <div
          class="icon-left"
        >
          <div
            class="Icon__Icons-pmfh88-0 bqaPQj"
          >
            <i>
              
            </i>
          </div>
        </div>
        <input
          autocomplete="password"
          class="icon-padding "
          id="password"
          name="default"
          placeholder="Password"
          type="text"
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots InputPassword with visibility and showPassword properties, true 1`] = `
<div
  class="InputPasswordstory__PageLayout-sc-15ehmhm-0 ecfdjd"
>
  <div
    class="inputPasswordstyle__InputPasswordStyles-sc-1wi8vl4-0 iYinPH"
  >
    <div
      class="inputWrapperstyle__InputStyles-sc-1pduhqy-0 ghDlDm"
    >
      <span
        class="label"
      >
        Password
      </span>
      <label
        class=""
        for="name"
        id="name"
      >
        <input
          autocomplete="password"
          class=""
          id="name"
          name="default"
          placeholder="Password"
          type="text"
        />
        <button
          class="button-position-right"
          tabindex="-1"
          type="button"
        >
          <div
            class="Icon__Icons-pmfh88-0 bqaPQj"
          >
            <i>
              
            </i>
          </div>
        </button>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots InputPassword with visibility property, true 1`] = `
<div
  class="InputPasswordstory__PageLayout-sc-15ehmhm-0 ecfdjd"
>
  <div
    class="inputPasswordstyle__InputPasswordStyles-sc-1wi8vl4-0 iYinPH"
  >
    <div
      class="inputWrapperstyle__InputStyles-sc-1pduhqy-0 ghDlDm"
    >
      <span
        class="label"
      >
        Password
      </span>
      <label
        class=""
        for="name"
        id="name"
      >
        <input
          autocomplete="password"
          class=""
          id="name"
          name="default"
          placeholder="Password"
          type="password"
        />
        <button
          class="button-position-right"
          tabindex="-1"
          type="button"
        >
          <div
            class="Icon__Icons-pmfh88-0 bqaPQj"
          >
            <i>
              
            </i>
          </div>
        </button>
      </label>
    </div>
  </div>
</div>
`;
